[package]
name = "m4"
version = "0.1.0"
authors = ["Reece Hagan <drogonmar@tuyuji.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true

[dependencies]
iced = { version = "0.4.2", features = ["svg", "tokio"] }
serde = "1.0.147"
serde_derive = "1.0.147"
toml = "0.5.9"
xdg = "2.4.1"
ashpd = "0.3.2"
url = "2.3.1"